--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: Pull Request
-on: [push]
+on: [pull_request]
 
 jobs:
   start-job:
@@ -11,6 +11,7 @@ jobs:
 
 
   submodule_regression_check:
+    if: github.event.pull_request.base.repo.id != github.event.pull_request.head.repo.id
     name: Submodule Regression Check
     runs-on: ubuntu-latest
     needs: start-job
@@ -24,7 +25,7 @@ jobs:
 
 
   amazon_linux-2-build:
-    # if: github.event.pull_request.base.repo.id != github.event.pull_request.head.repo.id
+    if: github.event.pull_request.base.repo.id != github.event.pull_request.head.repo.id
     name: Amazon_Linux 2 | Build
     runs-on: ubuntu-latest
     needs: start-job
@@ -85,7 +86,7 @@ jobs:
 
 
   centos-77-build:
-    # if: github.event.pull_request.base.repo.id != github.event.pull_request.head.repo.id
+    if: github.event.pull_request.base.repo.id != github.event.pull_request.head.repo.id
     name: CentOS 7.7 | Build
     runs-on: ubuntu-latest
     needs: start-job
@@ -146,7 +147,7 @@ jobs:
 
 
   ubuntu-1604-build:
-    # if: github.event.pull_request.base.repo.id != github.event.pull_request.head.repo.id  
+    if: github.event.pull_request.base.repo.id != github.event.pull_request.head.repo.id  
     name: Ubuntu 16.04 | Build
     runs-on: ubuntu-latest
     needs: start-job
@@ -207,7 +208,7 @@ jobs:
 
 
   ubuntu-1804-build:
-    # if: github.event.pull_request.base.repo.id != github.event.pull_request.head.repo.id
+    if: github.event.pull_request.base.repo.id != github.event.pull_request.head.repo.id
     name: Ubuntu 18.04 | Build
     runs-on: ubuntu-latest
     needs: start-job
@@ -268,7 +269,7 @@ jobs:
 
 
   macos-1015-build:
-    # if: github.event.pull_request.base.repo.id != github.event.pull_request.head.repo.id
+    if: github.event.pull_request.base.repo.id != github.event.pull_request.head.repo.id
     name: MacOS 10.15 | Build
     runs-on: macos-latest
     needs: start-job
