--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -66,7 +66,7 @@ steps:
           always-pull: true
           debug: true
           wait-network: true
-      - thedyrt/skip-checkout#v0.1.1:
+      - EOSIO/skip-checkout#v0.1.1:
           cd: ~
     agents:
       - "queue=mac-anka-large-node-fleet"
@@ -138,7 +138,7 @@ steps:
           always-pull: true
           debug: true
           wait-network: true
-      - thedyrt/skip-checkout#v0.1.1:
+      - EOSIO/skip-checkout#v0.1.1:
           cd: ~
     agents:
       - "queue=mac-anka-large-node-fleet"
@@ -275,7 +275,7 @@ steps:
           always-pull: true
           debug: true
           wait-network: true
-      - thedyrt/skip-checkout#v0.1.1:
+      - EOSIO/skip-checkout#v0.1.1:
           cd: ~
     agents:
       - "queue=mac-anka-node-fleet"
