--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -208,7 +208,7 @@ steps:
           always-pull: true
           debug: true
           wait-network: true
-      - thedyrt/skip-checkout#v0.1.1:
+      - EOSIO/skip-checkout#v0.1.1:
           cd: ~
     agents:
       - "queue=mac-anka-large-node-fleet"
