--- a/tests/unit/test_contracts/CMakeLists.txt
+++ b/tests/unit/test_contracts/CMakeLists.txt
@@ -1,3 +1,4 @@
+add_contract(action_results_test action_results_test action_results_test.cpp)
 add_contract(malloc_tests malloc_tests malloc_tests.cpp)
 add_contract(malloc_tests old_malloc_tests malloc_tests.cpp)
 add_contract(simple_tests simple_tests simple_tests.cpp)
