--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -11,8 +11,8 @@ endif()
 list(APPEND CMAKE_MODULE_PATH ${EOSIO_CDT_BIN})
 include(EosioCDTMacros)
 
-set(CMAKE_C_FLAGS " ${CMAKE_C_FLAGS} -O3 -Wall ")
-set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -O3 -Wall ")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -no-missing-ricardian-clause")
 
 add_subdirectory(libc)
 add_subdirectory(libc++)
