--- a/tools/abigen/eosio-abigen.cpp.in
+++ b/tools/abigen/eosio-abigen.cpp.in
@@ -214,7 +214,7 @@ class abigen : public generation_utils {
    }
 
    std::string to_index_type( std::string t ) {
-      return "i64";
+      return "i256";
    }
 
    void add_table( const clang::CXXRecordDecl* decl ) {
@@ -235,12 +235,12 @@ class abigen : public generation_utils {
       ctables.insert(t);
    }
 
-   void add_table( uint64_t name, const clang::CXXRecordDecl* decl ) {
+   void add_table( uint64_t name_v0, uint64_t name_v1, uint64_t name_v2, uint64_t name_v3, const clang::CXXRecordDecl* decl ) {
       if (!(decl->isEosioTable() && abigen::is_eosio_contract(decl, get_contract_name())))
          return;
       abi_table t;
       t.type = decl->getNameAsString();
-      t.name = name_to_string(name);
+      t.name = name_to_string(name_v0, name_v1, name_v2, name_v3);
       _abi.tables.insert(t);
    }
    
@@ -345,7 +345,7 @@ class abigen : public generation_utils {
       ojson o;
       o["name"] = t.name;
       o["type"] = t.type;
-      o["index_type"] = "i64";
+      o["index_type"] = "i256";
       o["key_names"] = ojson::array();
       o["key_types"] = ojson::array();
       return o;
@@ -513,8 +513,9 @@ class EosioRecordMatcher : public MatchFinder::MatchCallback {
       
          if (const clang::ClassTemplateSpecializationDecl* decl = res.Nodes.getNodeAs<clang::ClassTemplateSpecializationDecl>("eosio_abis")) {
             if ( decl->getName() == "multi_index" ) {
-               get_abigen_ref().add_table(decl->getTemplateArgs()[0].getAsIntegral().getExtValue(),
-                                         (clang::CXXRecordDecl*)((clang::RecordType*)decl->getTemplateArgs()[1].getAsType().getTypePtr())->getDecl());
+               get_abigen_ref().add_table(decl->getTemplateArgs()[0].getAsIntegral().getExtValue(), decl->getTemplateArgs()[1].getAsIntegral().getExtValue(),
+                                          decl->getTemplateArgs()[2].getAsIntegral().getExtValue(), decl->getTemplateArgs()[3].getAsIntegral().getExtValue(),
+                                          (clang::CXXRecordDecl*)((clang::RecordType*)decl->getTemplateArgs()[4].getAsType().getTypePtr())->getDecl());
             }
          }
       }
